<resources>
    <string name="app_name">PSAMRFTest</string>

    <!--通用字符串-->
    <string name="common_sure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="start_test">开始测试</string>
    <string name="stop_test">停止测试</string>
    <string name="abort_test">测试中止</string>
    <string name="test_result">测试结果</string>

    <!--主界面-->
    <string name="pasm_test">PSAM TEST</string>
    <string name="rf_test">RF TEST</string>

    <!--PASM测试界面-->
    <string name="test_count_title">测试次数</string>
    <string name="PSAM_serial_number_first">PASM 1</string>
    <string name="PSAM_serial_number_second">PASM 2</string>
    <string name="PSAM_serial_number_third">PASM 3</string>
    <string name="PSAM_serial_number_forth">PASM 4</string>
    <string name="PSAM_default_baud_rate">9600</string>
    <string name="PSAM_default_voltage">1.8v</string>
    <string name="PSAM_default_reset_model">冷复位</string>

    <!--射频模块测试界面-->
    <string name="inner_aerial">内置天线</string>
    <string name="out_aerial">外置天线</string>
    <string name="card_type">卡类型</string>
    <string name="card_serial_number">卡序列号</string>
    <string name="card_type_a">A卡</string>
    <string name="card_type_b">B卡</string>
    <string name="card_type_m_1k">M卡,1K</string>
    <string name="card_type_m_4k">M卡,4K</string>

</resources>
