<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/psam_tv_1"
            style="@style/PSAMSerialNumberStyle"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="32dp"
            android:text="@string/PSAM_serial_number_first"
            />

        <TextView
            android:id="@+id/psam_tv_2"
            style="@style/PSAMSerialNumberStyle"
            android:layout_alignTop="@+id/psam_tv_1"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@+id/psam_tv_1"
            android:layout_toRightOf="@+id/psam_tv_1"
            android:text="@string/PSAM_serial_number_second"/>

        <TextView
            android:id="@+id/psam_tv_3"
            style="@style/PSAMSerialNumberStyle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/psam_tv_1"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/PSAM_serial_number_third"/>

        <TextView
            android:id="@+id/psam_tv_4"
            style="@style/PSAMSerialNumberStyle"
            android:layout_alignLeft="@+id/psam_tv_2"
            android:layout_alignStart="@+id/psam_tv_2"
            android:layout_alignTop="@+id/psam_tv_3"
            android:text="@string/PSAM_serial_number_forth"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/show_data_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="5dp"
        android:text="test"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:id="@+id/test_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_count_title"/>

            <EditText
                android:id="@+id/test_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minWidth="70dp"
                android:text="0"/>
        </LinearLayout>

        <Button
            android:id="@+id/start_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rect_round_blue_bg"
            android:text="@string/start_test"/>

        <Button
            android:id="@+id/stop_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rect_round_blue_bg"
            android:text="@string/stop_test"/>
    </LinearLayout>


</LinearLayout>