<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp">

    <RadioGroup
        android:id="@+id/aerial_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/inner_aerial_radio_bt"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/inner_aerial_radio_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inner_aerial"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/out_aerial_radio_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_aerial"
            android:textSize="20sp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/card_type"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/card_type_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/card_serial_number"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/card_serial_number_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:textSize="20sp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/m1_card_test_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/test_result"
            android:textSize="20sp"/>

        <ProgressBar
            android:id="@+id/m1_card_test_progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>


    <Button
        android:id="@+id/RF_test_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/common_button_bg"
        android:padding="10dp"
        android:text="@string/start_test"
        android:textColor="@color/white"/>

</LinearLayout>